common model refactoring